# funcky

./: README.md  play.py  player.py  ports.py  pyproject.toml
funcky/: debug.py  decorators.py  dtos.py  midi_transport.py  mono_note_sequence.py  named_constants.py  rhythm.py  scales.py  sequences.py  song_base.py  type_guards.py
funcky/decorators/: accent.py  base_decorator.py  repetition.py  transpose.py  tune.py
funcky/operations/: decorators.py  mutators.py  setters.py
funcky/parts/: mono_part.py  part.py
funcky/sequences/: event_mono_sequence.py  event_poly_sequence.py  event_sequence.py  generic_mono_sequence.py  generic_poly_sequence.py  generic_sequence.py  note_mono_sequence.py  note_sequence.py
funcky/songs/: simple_song.py  song_base.py
funcky/utils/: debug.py  debug_dumper.py  debug_store.py
songs/: hello_world.py
tests/: test_scales.py  test_steps.py
tracks/hello_world/: song.py  tracks.py
