[tool.poetry]
name = "funcky"
version = "0.1.0"
description = "Functional music generation in python"
authors = ["Dan Ballance <work@danballance.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-rtmidi = "^1.5.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
